# tiny_spider

./: .gitignore  README.md  deploy.sh  deploy_mac.sh  deploy_tasks.sh  dockerfile  pyproject.toml  run_adhoc.sh
adhoc/: health.py  merge.py  r2.py  screentime.py
ara/: deploy.sh  main.py  pyproject.toml
evid-dash/: .gitignore  README.md  evidence.config.yaml  package-lock.json  package.json
evid-dash/.evidence/customization/: .profile.json
evid-dash/pages/: +layout.svelte  index.md
evid-dash/sources/apple/: connection.yaml  exercise.sql  rolling_hr.sql  sdnn.sql  steps.sql
evid-dash/sources/logs/: aw_hours.sql  cloudflare.sql  connection.yaml  contributions.sql  hours.sql  screentime.sql
evidence/: evid.sh  evidence.py  readme.md
src/: cal.py  cf_export.py  frame.py  guard.py  main.py  openwrt.py  plug.py  utils.py
